Accounted for mobile layout bugs

--- a/assets/css/_footer.scss
+++ b/assets/css/_footer.scss
@@ -7,6 +7,9 @@ footer {
     p {
         color: $footer-color-fg;
         margin: 0;
+        @media(max-width: $screen-sm) {
+            font-size: 12px;
+        }
     }
 
     #social-media {
